--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-#guessButton:hover {
-    background-color: rgb(90, 90, 90);
-    color: rgb(0, 0, 0);
- }
- 
  #guessButton {
      padding-top: 7px;
      padding-bottom: 7px;
@@ -10,7 +5,7 @@
     padding-left: 10px;
  }
 
- #guessInput {
+ Input {
      height: 55px;
      font-size: 50px;
  }
@@ -33,6 +28,12 @@
     padding-right: 10px;
     border-radius: 16px;
     font-size: larger;
+    font-weight: 600;
+ }
+
+ Button:hover {
+    background-color: rgb(90, 90, 90);
+    color: rgb(0, 0, 0);
  }
  
  #babyButton {
