--- a/index.css
+++ b/index.css
@@ -1,25 +1,73 @@
  #guessButton {
-    padding-top: 7px;
-    padding-bottom: 7px;
-    padding-right: 10px;
-    padding-left: 10px;
+    position: relative;
+    margin-top: 200px;
+    height: 200px;
+    width: 600px;
+    padding-top: 0px;
+    padding-bottom: 25px;
+    padding-right: 30px;
+    padding-left: 30px;
+    text-align: center;
+    font-size: 180px;
+ }
+
+ #guessInput {
+    margin-top: 200px;
+ }
+
+ #nameButton {
+  margin-top: 100px;
+  height: 200px;
+  width: 600px;
+  padding-top: 0px;
+  padding-bottom: 25px;
+  padding-right: 30px;
+  padding-left: 30px;
+  text-align: center;
+  font-size: 180px;
+ }
+
+ #responseText {
+   position: fixed;
+   top: 0px;
+   left: 0px;
+   right: 0px;
+ }
+
+ #nameText {
+   color: rgb(218, 218, 218);
  }
 
  .title {
-    font-size: 50px;
+    font-size: 100px;
+    text-align: center;
+ }
+
+ .backToMenu {
     position: fixed;
-    top: 0px;
-    left: 200px;
+    text-align: center;
+    margin-left: 0px;
+    width: 200px;
+    top: 25px;
+    left: 25px;
+ }
+
+ li {
+    margin-left: 50px;
+    text-align: left !important;
+    font-size: 80px;
  }
 
  Input {
-    height: 55px;
-    font-size: 50px;
+    height: 200px;
+    width: 1600px;
+    font-size: 200px;
+    padding: 20px;
  }
 
  body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: x-large;
+    font-size: 50px;
     font-weight: 600;
     background-color: rgb(90, 90, 90);
     color: white;
@@ -36,12 +84,18 @@
     border-radius: 16px;
     font-size: larger;
     font-weight: 600;
-    height: 50px;
+    height: 100px;
  }
 
  Button:hover {
     background-color: rgb(112, 112, 112);
     color: rgb(0, 0, 0);
+ }
+
+ .center {
+    position: relative;
+    text-align: center;
+    margin: auto;
  }
  
  .menu {
@@ -58,6 +112,7 @@
  }
 
  .menuButton {
+    font-size: 50px;
     width: 700px;
     height: 100px;
     transition: width 0.5s, height 0.5s;
@@ -73,7 +128,11 @@
  }
 
  .difficultyButton {
-    width: 150px;
+    position: relative;
+    text-align: center;
+    margin: auto;
+    margin-top: 10px;
+    width: 250px;
     transition: width 1s;
     color: black;
     border-color: black;
@@ -82,9 +141,15 @@
 
  .difficultyButton:hover {
     color: rgb(255, 255, 255);
-    width: 200px;
+    width: 300px;
     border-color: white;
  }
+
+ .difficultyButtonSelected {
+    color:white !important;
+    border-color: white !important;
+    width: 300px;
+}
 
   .babyButton {
       background-color: rgb(115, 255, 255);
