--- a/index.css
+++ b/index.css
@@ -28,10 +28,9 @@
  }
 
  #responseText {
-   position: fixed;
+   position: relative;
+   text-align: center;
    top: 0px;
-   left: 0px;
-   right: 0px;
  }
 
  #nameText {
@@ -59,8 +58,9 @@
  }
 
  Input {
+    position: relative;
+    width: 100%;
     height: 200px;
-    width: 1600px;
     font-size: 200px;
     padding: 20px;
  }
@@ -71,6 +71,7 @@
     font-weight: 600;
     background-color: rgb(90, 90, 90);
     color: white;
+    overflow-y: auto;
  }
 
  button {
